# ChessEngine

./: .gitignore  CMakeLists.txt  Cosas pendientes.txt  README.md  bitops.c  bitops.h  board.c  board.h  eval.c  eval.h  gmon.out  magic_bitboards.c  magic_bitboards.h  main.c  makefile  moves.c  moves.h  perft.c  perft.h  recursos.txt  resultados_perft.txt  script.sh  search.c  search.h  transposition.h  uci.c  zobrist.c  zobrist.h
src/: magic_bitboards.h  main_debug_perft.c  moves.c  moves.h  perft.c  search.h  time.c  time.h  transposition.c  uci.c  uci.h  zobrist.h
